[project]
name = "openimage"
description = "Lets you open a generated Image in a Specific Program."
version = "2.0.1"
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
Repository = "https://github.com/nic-schi/ComfyUI-OpenImage"
Documentation = "https://github.com/nic-schi/ComfyUI-OpenImage/blob/main/README.md"
"Bug Tracker" = "https://github.com/nic-schi/ComfyUI-OpenImage/issues"

[tool.comfy]
PublisherId = "nic-schi"
DisplayName = "ComfyUI-OpenImage"
Icon = "https://raw.githubusercontent.com/nic-schi/ComfyUI-OpenImage/refs/heads/main/icon.png"
includes = [] 
